--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         function getModelDetails(model) {
             if (/^RF|RS|RT|RB|RL/.test(model)) {
                 return getFridgeDetails(model);
-            } else if (/^WW|WD/.test(model)) {
+            } else if (/^WW|WD|DV/.test(model)) {
                 return getWasherDetails(model);
             } else if (/^Q|U|L|K/.test(model)) {
                 return getTVDetails(model);
@@ -131,7 +131,7 @@
         }
 
         function extractSize(model) {
-            return model.match(/^\D+(\d+)/) ? RegExp.$1 : "לא ידוע";
+            return model.match(/\d+/) ? RegExp.$& : "לא ידוע";
         }
 
         function extractDisplayType(model) {
@@ -143,6 +143,18 @@
             if (!cap) return "לא ידוע";
             var num = parseInt(cap[0]);
             return type === 'washer' ? num / 10 : num;
+        }
+
+        function extractFridgeType(model) {
+            return model.startsWith("RF") ? "דלת ליד דלת" : model.startsWith("RS") ? "Side by Side" : "סטנדרטי";
+        }
+
+        function extractFinish(model) {
+            return /S/.test(model) ? "נירוסטה" : /B/.test(model) ? "שחור" : "לבן";
+        }
+
+        function extractColor(model) {
+            return /W/.test(model) ? "לבן" : /S/.test(model) ? "כסוף" : /B/.test(model) ? "שחור" : "לא ידוע";
         }
     </script>
 </body>
