--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             } else if (/^Q|U|L|K/.test(model)) {
                 return getTVDetails(model);
             } else {
-                return `⚠️ הדגם שהוזן אינו מזוהה, אך ייתכן שהוא שייך לקטגוריה אחרת. נסה לבדוק שוב.`;
+                return `⚠️ הדגם שהוזן אינו מזוהה. נסה לבדוק שוב או לוודא שהוזן כראוי.`;
             }
         }
 
@@ -127,11 +127,13 @@
 
         function extractYear(model) {
             var years = {"N": 2018, "R": 2019, "T": 2020, "A": 2021, "B": 2022, "C": 2023, "D": 2024};
-            return years[model.match(/[NRTABCD]/)] || "לא ידוע";
+            var match = model.match(/[NRTABCD]/);
+            return match ? years[match[0]] : "לא ידוע";
         }
 
         function extractSize(model) {
-            return model.match(/\d+/) ? RegExp.$& : "לא ידוע";
+            var match = model.match(/\d+/);
+            return match ? match[0] : "לא ידוע";
         }
 
         function extractDisplayType(model) {
@@ -139,9 +141,9 @@
         }
 
         function extractCapacity(model, type) {
-            var cap = model.match(/\d+/);
-            if (!cap) return "לא ידוע";
-            var num = parseInt(cap[0]);
+            var match = model.match(/\d+/);
+            if (!match) return "לא ידוע";
+            var num = parseInt(match[0]);
             return type === 'washer' ? num / 10 : num;
         }
 
