--- a/index.html
+++ b/index.html
@@ -6,64 +6,87 @@
     <title>בדיקת מוצר</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Roboto', Arial, sans-serif;
             text-align: center;
-            background: linear-gradient(to right, #2193b0, #6dd5ed);
-            padding: 20px;
+            background: linear-gradient(135deg, #1e3c72, #2a5298);
+            padding: 40px;
+            margin: 0;
+            min-height: 100vh;
         }
         .container {
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+            background: rgba(255, 255, 255, 0.95);
+            padding: 25px;
+            border-radius: 15px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
             max-width: 500px;
             margin: auto;
             text-align: center;
+            border: 1px solid rgba(0, 123, 255, 0.5);
+            backdrop-filter: blur(5px);
         }
         h2 {
-            color: #333;
-            margin-bottom: 15px;
+            color: #1e3c72;
+            margin-bottom: 20px;
+            font-weight: 700;
+            text-transform: uppercase;
+            letter-spacing: 1px;
         }
         input {
-            width: calc(100% - 20px);
-            padding: 10px;
-            margin-top: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
+            width: calc(100% - 24px);
+            padding: 12px;
+            margin-top: 15px;
+            border: 2px solid #007bff;
+            border-radius: 8px;
             font-size: 16px;
             text-align: center;
+            background: #f0f4ff;
+            transition: border-color 0.3s, box-shadow 0.3s;
+        }
+        input:focus {
+            outline: none;
+            border-color: #0056b3;
+            box-shadow: 0 0 10px rgba(0, 123, 255, 0.5);
         }
         button {
             width: 100%;
-            padding: 10px;
-            margin-top: 15px;
-            background: #007bff;
+            padding: 12px;
+            margin-top: 20px;
+            background: linear-gradient(90deg, #007bff, #00c4ff);
             color: white;
             border: none;
-            border-radius: 5px;
+            border-radius: 8px;
             font-size: 16px;
+            font-weight: 600;
             cursor: pointer;
-            transition: background 0.3s ease-in-out;
+            transition: transform 0.2s, box-shadow 0.3s;
         }
         button:hover {
-            background: #0056b3;
+            transform: translateY(-2px);
+            box-shadow: 0 5px 15px rgba(0, 123, 255, 0.6);
         }
         #result {
-            margin-top: 20px;
-            padding: 15px;
-            border-radius: 5px;
-            background: #f8f9fa;
+            margin-top: 25px;
+            padding: 20px;
+            border-radius: 10px;
+            background: linear-gradient(135deg, #e9ecef, #f8f9fa);
             display: none;
             text-align: right;
             font-size: 16px;
             border-left: 5px solid #007bff;
             direction: rtl;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+            animation: fadeIn 0.5s ease-in-out;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(10px); }
+            to { opacity: 1; transform: translateY(0); }
         }
     </style>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <h2>בדיקת מוצר לפי קוד דגם</h2>
+        <h2>בדיקת מוצר סמסונג</h2>
         <input type="text" id="modelInput" placeholder="הכנס קוד דגם">
         <button onclick="lookupModel()">🔍 חפש</button>
         <div id="result"></div>
@@ -189,6 +212,7 @@
 
         function getTVDetails(model) {
             let display = tvDisplay[model[0]] || 'לא ידוע';
+            if (model.includes('LS03')) display = 'The Frame';
             let market = tvMarket[model[1]] || 'לא ידוע';
             let size = model[2] + model[3];
             let year = yearCodes[model[4]] || 'לא ידוע';
